k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: subnet-calculator-ingress
  annotations:
    cert-manager.io/cluster-issuer: "issuer"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: subnet-calc.<domain>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: subnet-calculator
            port:
              number: 80
  tls:
  - hosts:
    - subnet-calc.<domain>
    secretName: subnet-calculator-tls
